--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:30:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:31:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-2 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -246,8 +246,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-2 thru 13</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -265,6 +265,22 @@ E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 4</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland(W) +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Tyrrell Hatton +4
++2 thru 4</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -294,10 +310,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td class="greyout leftborder">Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout">Jon Rahm +2
 E thru 4</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -316,22 +332,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland(W) +3
--1 thru 12</td>
-      <td class="greyout leftborder">Tyrrell Hatton +4
-+2 thru 4</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler(W) -8
@@ -345,7 +345,7 @@ E thru 5</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 4</td>
       <td class="greyout">Robert MacIntyre +3
-+1 thru 2</td>
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -420,10 +420,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Rory McIlroy +2
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -436,10 +436,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay(W) +1
 E thru 1</td>
-      <td>Jon Rahm +2
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -454,8 +454,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-2 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -504,8 +504,8 @@ Not started</td>
 E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 4</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 12</td>
+      <td class="greyout">Viktor Hovland +2
+-2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -521,6 +521,22 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-3</td>
+      <td>Shane Lowry(W) -3
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Joaquin Niemann -1
+Not started</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -540,6 +556,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
       <td>Collin Morikawa -1
@@ -550,10 +582,10 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods(W) +1
 E thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td class="greyout leftborder">Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout">Rory McIlroy +2
 E thru 5</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -572,19 +604,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-2</td>
-      <td>Shane Lowry(W) -3
+      <td>Scottie Scheffler -8
 Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Joaquin Niemann -1
-Not started</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td>Rory McIlroy +2
+E thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Brian Harman
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -620,22 +652,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
@@ -649,22 +665,6 @@ E thru 5</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 4</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 4</td>
-      <td>Rory McIlroy +2
-E thru 5</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -692,10 +692,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Jon Rahm +2
+      <td>Viktor Hovland(W) +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
--1 thru 12</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -724,10 +724,10 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods +1
 E thru 2</td>
-      <td>Rory McIlroy +2
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -740,11 +740,27 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Rory McIlroy +2
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -764,6 +780,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">3</td>
       <td>Dustin Johnson -2
@@ -772,26 +804,10 @@ Not started</td>
 E thru 1</td>
       <td>Rory McIlroy(W) +2
 E thru 5</td>
-      <td>Jon Rahm +2
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 4</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -805,26 +821,26 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 4</td>
       <td>Robert MacIntyre +3
-+1 thru 2</td>
++1 thru 3</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 7</td>
++3 thru 8</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm(W) +2
+      <td>Patrick Cantlay +1
+E thru 1</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td>Jon Rahm +2
 E thru 4</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 8</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -844,35 +860,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 1</td>
-      <td>Jon Rahm +2
-E thru 4</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 7</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Jon Rahm(W) +2
 E thru 4</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
       <td>Rory McIlroy +2
 E thru 5</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
       <td class="greyout leftborder">Bubba Watson +4
 +2 thru 3</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">5</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 1</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -892,30 +908,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">6</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 1</td>
-      <td>Jon Rahm +2
-E thru 4</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 Not started</td>
+      <td>Viktor Hovland(W) +2
+-2 thru 13</td>
       <td>Jon Rahm +2
 E thru 4</td>
-      <td>Viktor Hovland(W) +3
--1 thru 12</td>
       <td>Patrick Reed +5
 +2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -940,8 +940,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Yellow in Augusta</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas(W)</td>
-      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -1018,8 +1018,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Bryan Francis</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas(W)</td>
-      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
