--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:30:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:31:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
--1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
+-2 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -228,24 +228,24 @@ Not started</td>
 Not started</td>
       <td>Joaquin Niemann -1
 Not started</td>
-      <td>Rory McIlroy +2
+      <td>Viktor Hovland +2
+-2 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 E thru 5</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+      <td class="greyout">Tommy Fleetwood(W) +3
 E thru 10</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -263,7 +263,7 @@ Not started</td>
       <td>Tony Finau +3
 +1 thru 8</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 7</td>
++3 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -309,9 +309,9 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 4</td>
       <td>Robert MacIntyre +3
-+1 thru 2</td>
++1 thru 3</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 7</td>
++3 thru 8</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
+      <td>Viktor Hovland +2
+-2 thru 13</td>
       <td>Jon Rahm +2
 E thru 4</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 Not started</td>
+      <td>Viktor Hovland(W) +2
+-2 thru 13</td>
       <td>Jon Rahm +2
 E thru 4</td>
-      <td>Viktor Hovland(W) +3
--1 thru 12</td>
       <td>Patrick Reed +5
 +2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
