--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:31:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:32:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -230,10 +230,10 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +2
 -2 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 5</td>
-      <td class="greyout">Tommy Fleetwood(W) +3
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
 E thru 10</td>
+      <td class="greyout">Rory McIlroy +3
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -269,15 +269,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Rory McIlroy +2
-E thru 5</td>
+      <td>Rory McIlroy +3
++1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
