--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:36:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:37:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Webb Simpson E
+-1 thru 2</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 4</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -8
@@ -249,22 +265,6 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 -2 thru 13</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Webb Simpson +1
-E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 4</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
